--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,28 @@
     package="com.example.myapplication">
 
     <application
+        android:name=".Global"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/myTheme">
-        <activity android:name=".Time_DB">
-
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+        </activity>
+        <activity android:name=".RegisterActivity"/>
+        <activity android:name=".GoCalendar"/>
+        <activity android:name=".CalendarActivity"/>
+        <activity android:name=".Time_DB"/>
+        <activity android:name=".addFriend">
+
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 
